--- a/app/index.html
+++ b/app/index.html
@@ -11,10 +11,21 @@
 </head>
 <body>
 
+    <header class="header">
+        <div class="container">
+            <div class="header__inner">
+                <div class="logo">
+                  <a href="#" class="logo-link">
+                      <img style=" with: 100px" src="images/header/logo.png" alt="" class="logo-img">
+                  </a>
+                </div>
+            </div>
+        </div>
+    </header>
 
 
 
-    
+
 
 
 
