added upgrade section

--- a/app/index.html
+++ b/app/index.html
@@ -78,7 +78,22 @@
             </div>
         </div>
     </header>
-
+    <section class="upgrade" style="background-image: url(images/upgrade-bg.jpg); background-size: cover; background-position: center;
+    background-repeat: no-repeat; ">
+    <div class="upgrade-bg"></div>
+        <div class="container">
+            <div class="upgrade__inner">
+                <h3 class="upgrade__small-title">new way to build a healthy lifestyle!</h3>
+                <h1 class="upgrade__title">UPGRADE YOUR BODY AT GYMSO FITNESS</h1>
+                     <a href="#" class="upgrade__button-odd">
+                         Get started
+                     </a>
+                     <a href="#" class="upgrade__button-even">
+                         Learn more
+                    </a>
+            </div>
+        </div>
+    </section>
 
 
 
