added newto section

--- a/app/index.html
+++ b/app/index.html
@@ -95,6 +95,50 @@
         </div>
     </section>
 
+    <section class="newto">
+        <div class="container">
+            <div class="newto__inner">
+                <div class="newto__left">
+                    <div class="newto-title">
+                        New to the gymso?
+                        <span> 
+                            Your membership is up to 2 months FREE ($62.50 per month)
+                        </span>
+                        </div>
+                        <div class="newto__left-text">
+                            Gymso is free HTML template by Tooplate for your commercial website. Bootstrap v4.2.1 Layout. Feel free to use it.
+                        </div>
+                        <a href="#" class="newto__left-link"> Become a member today</a>
+                    </div>
+                
+                <div class="newto__right">
+                    <div class="newto-title">
+                        Working hours
+                    </div> 
+                    <ul class="newto__right-days">
+                        <li>
+                            Sunday : Closed
+                            <span>
+
+                            </span>
+                        </li>
+                        <li>
+                            Monday - Friday
+                            <span>
+                                7:00 AM - 10:00 PM
+                            </span>
+                        </li>
+                        <li>
+                            Saturday
+                            <span>
+                                6:00 AM - 4:00 PM
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
