fixed menu width

--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,22 @@
                                 Home
                             </a>
                         </li>
+                        <li class="menu__list-item">
+                            <a data-goto=".home" href="#" class="menu__list-item-link">
+                                Home
+                            </a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a data-goto=".home" href="#" class="menu__list-item-link">
+                                Home
+                            </a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a data-goto=".home" href="#" class="menu__list-item-link">
+                                Home
+                            </a>
+                        </li>
+                        
                     
                         <li class="menu__list-item">
                             <a data-goto=".about" href="#" class="menu__list-item-link">
