--- a/app/index.html
+++ b/app/index.html
@@ -38,22 +38,7 @@
                                 Home
                             </a>
                         </li>
-                        <li class="menu__list-item">
-                            <a data-goto=".home" href="#" class="menu__list-item-link">
-                                Home
-                            </a>
-                        </li>
-                        <li class="menu__list-item">
-                            <a data-goto=".home" href="#" class="menu__list-item-link">
-                                Home
-                            </a>
-                        </li>
-                        <li class="menu__list-item">
-                            <a data-goto=".home" href="#" class="menu__list-item-link">
-                                Home
-                            </a>
-                        </li>
-                        
+
                     
                         <li class="menu__list-item">
                             <a data-goto=".about" href="#" class="menu__list-item-link">
@@ -123,21 +108,21 @@
             </div>
         </div>
     </header>
-    <section id="home" class="home" style="background-image: url(images/upgrade-bg.jpg); background-size: cover; background-position: center;
+    <section id="home" class="home " style="background-image: url(images/upgrade-bg.jpg); background-size: cover; background-position: center;
     background-repeat: no-repeat; ">
         <div class="home-bg"></div>
         <div class="container">
             <div class="home__inner">
-                <h3 class="home__small-title">
+                <h3 class="home__small-title element-animation">
                     new way to build a healthy lifestyle!
                 </h3>
-                <h1 class="home__title">
+                <h1 class="home__title element-animation">
                     upgrade YOUR BODY AT GYMSO FITNESS
                 </h1>
-                <a href="#" class="home__button-odd">
+                <a href="#" class="home__button-odd element-animation">
                     Get started
                 </a>
-                <a href="#" class="home__button-even">
+                <a href="#" class="home__button-even element-animation">
                     Learn more
                 </a>
             </div>
@@ -148,25 +133,25 @@
         <div class="container">
             <div class="newto__inner">
                 <div class="newto__left">
-                    <div class="newto-title">
+                    <div class="newto-title element-animation">
                         New to the gymso?
                         <span>
                             Your membership is up to 2 month FREE ($62.50 per month)
                         </span>
                     </div>
-                    <div class="newto__left-text">
+                    <div class="newto__left-text element-animation">
                         Gymso is free HTML template by Tooplate for your commercial website. Bootstrap v4.2.1 Layout.
                         Feel free to use it.
                     </div>
-                    <a href="#" class="newto__left-link"> Become a member today</a>
+                    <a href="#" class="newto__left-link element-animation"> Become a member today</a>
                 </div>
 
                 <div class="newto__right">
-                    <div class="newto-title">
+                    <div class="newto-title element-animation">
                         Working hours
 
                     </div>
-                    <ul class="newto__right-days">
+                    <ul class="newto__right-days element-animation">
                         <li>
                             Sunday : Closed
                             <span>
@@ -194,14 +179,14 @@
         <div class="container">
             <div class="about__inner">
                 <div class="about__description">
-                    <div class="about__description-title">
+                    <div class="about__description-title element-animation">
                         Hello, we are Gymso
                     </div>
-                    <div class="about__description-text">
+                    <div class="about__description-text element-animation">
                         You are NOT allowed to redistribute this HTML template downloadable ZIP file on any template
                         collection site. You are allowed to use this template for your personal or business websites.
                     </div>
-                    <div class="about__description-bot">
+                    <div class="about__description-bot element-animation">
                         If you have any question regarding
                         <span>
                             <a href="#">Gymso Fitness HTML template
@@ -216,11 +201,11 @@
                         immediately. Thank you.
                     </div>
                 </div>
-                <div class="about__trainers">
-                    <div class="about__trainers-box">
+                <div class="about__trainers element-animation">
+                    <div class="about__trainers-box ">
                         <div class="about__trainers-div">
                             <a href="#" class="about__trainers-link">
-                                <img src="images/trainer-1.jpg" alt="" class="about__trainers-div-img">
+                                <img src="images/trainer-1.jpg" alt="" class="about__trainers-div-img ">
                             </a>
                         </div>
                         <div class="about__trainers__bot">
@@ -258,7 +243,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="about__trainers-box">
+                    <div class="about__trainers-box ">
 
                         <div class="about__trainers-div">
                             <a href="#" class="about__trainers-link">
@@ -309,12 +294,12 @@
     <section id="classes" class="classes">
         <div class="container">
             <div class="classes__inner">
-                <h3 class="classes-title-small">
+                <h3 class="classes-title-small element-animation">
                     Get A Perfect Body
                 </h3>
-                <h2 class="classes-title">Our Training Classes</h2>
+                <h2 class="classes-title element-animation">Our Training Classes</h2>
                 <div class="classes__items">
-                    <div class="classes__item">
+                    <div class="classes__item element-animation">
                         <div class="classes__item-div">
                             <a href="#" class="classes__item-link">
                                 <img src="images/yoga.jpg" alt="" class="classes__item-img">
@@ -346,7 +331,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="classes__item">
+                    <div class="classes__item element-animation">
                         <div class="classes__item-div">
                             <a href="#" class="classes__item-link">
                                 <img src="images/crossfit.jpg" alt="" class="classes__item-img">
@@ -375,7 +360,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="classes__item">
+                    <div class="classes__item element-animation">
                         <div class="classes__item-div">
                             <a href="#" class="classes__item-link">
                                 <img src="images/cardio.jpg" alt="" class="classes__item-img">
@@ -413,14 +398,14 @@
     <section id="shedules" class="shedules">
         <div class="container">
             <div class="shedules__inner">
-                <div class="shedules-subtitle">
+                <div class="shedules-subtitle element-animation">
                     our weekly GYM schedules
                 </div>
-                <div class="shedules-title">
+                <div class="shedules-title element-animation">
                     Workout Timetable
                 </div>
                 <div class="shedules__box">
-                    <div class="shedules__box-time">
+                    <div class="shedules__box-time element-animation">
                         <ul>
                             <li class="shedules__box-red-item">
                                 img
@@ -439,7 +424,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="shedules__box__slider">
+                    <div class="shedules__box__slider element-animation">
                         <div class="shedules__box-day">
                             <ul>
                                 <li class="shedules__box-red-item">
@@ -634,14 +619,14 @@
         <div class="container">
             <div class="contact-inner">
                 <div class="contact__box">
-                    <h3 class="contact__box-title">
+                    <h3 class="contact__box-title element-animation">
                         Feel free to ask anything
                     </h3>
                     <div class="contact__form">
-                        <input type="text" class="contact__form-name" placeholder="Name">
-                        <input type="email" class="contact__form-email" placeholder="Email">
-                        <textarea class="contact__form-text" placeholder="Message"></textarea>
-                        <button class="contact-button">
+                        <input type="text" class="contact__form-name element-animation" placeholder="Name">
+                        <input type="email" class="contact__form-email element-animation" placeholder="Email">
+                        <textarea class="contact__form-text element-animation" placeholder="Message"></textarea>
+                        <button class="contact-button element-animation">
                             Send Message
                         </button>
                     </div>
@@ -650,11 +635,11 @@
 
 
                 <div class="contact__box">
-                    <h3 class="contact__box-title">
+                    <h3 class="contact__box-title element-animation">
                         Where you can find us
 
                     </h3>
-                    <div class="contact__address">
+                    <div class="contact__address element-animation">
 
                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="16" height="28"
                             viewBox="0 0 16 28">
@@ -666,7 +651,7 @@
                         120-240 Rio de Janeiro - State of Rio de Janeiro, Brazil
 
                     </div>
-                    <div class="contact-map">
+                    <div class="contact-map element-animation">
                         <div style="position:relative;overflow:hidden;"><a
                                 href="https://yandex.ru/maps?utm_medium=mapframe&utm_source=maps"
                                 style="color:#eee;font-size:12px;position:absolute;top:0px;">Яндекс.Карты</a><a
@@ -683,14 +668,14 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-inner">
-                <div class="footer-designer">
+                <div class="footer-designer element-animation">
                     Copyright © 2020 Gymso Fitness Co.
                     <span>
                         Design: Tooplate
                     </span>
                 </div>
                 <div class="footer-contact">
-                    <a href="mailto:petromars444@gmail.com" class="footer-email">
+                    <a href="mailto:petromars444@gmail.com" class="footer-email element-animation">
                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
                             viewBox="0 0 32 32">
                             <title>mail</title>
@@ -700,7 +685,7 @@
                         </svg>
                         petromars444@gmail.com
                     </a>
-                    <a href="tel:+79251415930" class="footer-tel">
+                    <a href="tel:+79251415930" class="footer-tel element-animation">
                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="22" height="28"
                             viewBox="0 0 22 28">
                             <title>phone</title>
